registry/check_errors.txt
cargo : warning: unused import: 
`uuid::Uuid`
Au caractère Ligne:1 : 1
+ cargo check 2>&1 | Out-File 
-FilePath check_errors.txt 
-Encoding utf8 ...
+ ~~~~~~~~~~~~~~~~
    + CategoryInfo          : 
No    tSpecified: (warning: 
unused     import: 
`uuid::Uuid`:String    ) [], 
RemoteException
    + FullyQualifiedErrorId : 
Na    tiveCommandError
 
 --> src\models\mod.rs:2:5
  |
2 | use uuid::Uuid;
  |     ^^^^^^^^^^
  |
  = note: 
`#[warn(unused_imports)]` (part 
of `#[warn(unused)]`) on by 
default

warning: `registry` (lib) 
generated 1 warning (run `cargo 
fix --lib -p registry` to apply 
1 suggestion)
    Checking registry v0.1.0 (C:
\Users\Arthur\Desktop\mosaic\reg
istry)
error[E0433]: failed to 
resolve: use of unresolved 
module or unlinked crate 
`routes`
  --> src\main.rs:24:15
   |
24 |     let app = 
routes::create_routes(db);
   |               ^^^^^^ use 
of unresolved module or 
unlinked crate `routes`
   |
help: a struct with a similar 
name exists
   |
24 -     let app = 
routes::create_routes(db);
24 +     let app = 
Router::create_routes(db);
   |
help: to make use of source 
file src\routes\mod.rs, use 
`mod routes` in this file to 
declare the module
   |
 1 + mod routes;
   |
help: consider importing this 
module
   |
 1 + use registry::routes;
   |

warning: unused imports: 
`Router` and `routing::get`
 --> src\main.rs:1:12
  |
1 | use axum::{routing::get, 
Router};
  |            ^^^^^^^^^^^^  
^^^^^^
  |
  = note: 
`#[warn(unused_imports)]` (part 
of `#[warn(unused)]`) on by 
default

For more information about this 
error, try `rustc --explain 
E0433`.
warning: `registry` (bin 
"registry") generated 1 warning
error: could not compile 
`registry` (bin "registry") due 
to 1 previous error; 1 warning 
emitted
